--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ repositories {
 }
 
 dependencies {
+	// Spring Data Jpa dependency
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// MySQL connector
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
+
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
